implement accepting/merging
