# mainServer/server/router.go
@@ -28,6 +28,7 @@ func SetUpRouter(contrs ControllerEnv) *gin.Engine {
 
 	router.POST("/articles/:articleID/requests", contrs.req.CreateRequest)
 	router.PUT("/articles/:articleID/requests/:requestID/reject", contrs.req.RejectRequest)
+	router.PUT("/articles/:articleID/requests/:requestID/accept", contrs.req.AcceptRequest)
 
 	router.POST("/users", contrs.user.Register)
 	router.POST("/login", contrs.user.Login)
