# mainServer/services/request.go
@@ -67,3 +67,47 @@ func (s RequestService) RejectRequest(request int64, email string) error {
 	// reject the request
 	return s.Repo.SetStatus(request, entities.RequestRejected)
 }
+
+// AcceptRequest accepts the specified request, changing its status, recording the last commits and committing the merge in git.
+// returns an error if the current user doesn't own the target version
+func (s RequestService) AcceptRequest(request int64, email string) error {
+
+	// get the request information
+	req, err := s.Repo.GetRequest(request)
+	if err != nil {
+		return err
+	}
+
+	// check who the owner is
+	target := req.TargetVersionID
+	ok, err := s.Versionrepo.CheckIfOwner(target, email)
+	if err != nil {
+		return err
+	}
+	if !ok {
+		return fmt.Errorf("request cannot be accepted, because %v does not own version %v", email, target)
+	}
+
+	// record the current most recent history/commit IDs of both versions (branches)
+	req.SourceHistoryID, err = s.Gitrepo.GetLatestCommit(req.ArticleID, req.SourceVersionID)
+	if err != nil {
+		return err
+	}
+	req.TargetHistoryID, err = s.Gitrepo.GetLatestCommit(req.ArticleID, req.TargetVersionID)
+	if err != nil {
+		return err
+	}
+	err = s.Repo.UpdateRequest(req)
+	if err != nil {
+		return err
+	}
+
+	// commit the merge in git
+	err = s.Gitrepo.Merge(req.ArticleID, req.SourceVersionID, req.TargetVersionID)
+	if err != nil {
+		return err
+	}
+
+	// accept the request
+	return s.Repo.SetStatus(request, entities.RequestAccepted)
+}
